fix z-index of slide panel

--- a/css/styles.css
+++ b/css/styles.css
@@ -4409,7 +4409,7 @@ td.diff del {
 /** "slide panel" component */
 
 .slidepanel {
-   z-index: 100;
+   z-index: 1000;
    position: fixed;
    width: 30em;
    max-width: 40%;
